fix: corriger ApiApplicationTests et style Java 21
- ApiApplicationTests: ajout @ActiveProfiles("test") pour utiliser H2
- TransactionRepositoryTest: get(0) → getFirst() (Java 21)
- 20/20 tests verts